--- a/package.json
+++ b/package.json
@@ -19,12 +19,20 @@
   },
   "homepage": "https://github.com/xnagpa/react_playground#readme",
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-latest": "^6.16.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-runtime": "^6.22.0",
+    "babel-cli": ">6.18.0",
+    "babel-runtime": ">6.22.0",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-latest": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "css-loader": "^0.26.2",
+    "react-hot-loader": "^3.0.0-beta.6",
+    "style-loader": "^0.13.2",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1",
+
+
     "better-console": "^1.0.0",
     "css-loader": "^0.26.1",
     "del": "^2.2.2",
@@ -58,20 +66,15 @@
     "gulp-util": "^3.0.8",
     "gulp-watch": "^4.3.11",
     "map-stream": "0.0.6",
-    "react-hot-loader": "^3.0.0-beta.6",
     "require-dot-file": "^0.4.0",
     "run-sequence": "^1.2.2",
     "semantic-ui": "^2.2.7",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2",
     "yamljs": "^0.2.8",
     "@storybook/react": "^3.0.1"
   },
   "dependencies": {
-    "c3": "^0.4.11",
-    "d3": "^4.4.3",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "react": "^15.4.2",
