--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,7 @@
 {
   "presets": ["latest", "react"],
-  "plugins": ["react-hot-loader/babel"]
+  "plugins": ["react-hot-loader/babel",
+              ["transform-object-rest-spread",
+              { "useBuiltIns": true }]
+            ]
 }
