--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "start": "node initializers/server/idex.js"
   },
   "repository": {
     "type": "git",
@@ -72,7 +73,10 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "yamljs": "^0.2.8",
-    "@storybook/react": "^3.0.1"
+    "@storybook/addon-actions": "^3.1.8",
+    "@storybook/addon-info": "^3.1.6",
+    "@storybook/addon-knobs": "^3.1.6",
+    "@storybook/react": "^3.1.7"
   },
   "dependencies": {
     "lodash": "^4.17.4",
