--- a/package.json
+++ b/package.json
@@ -27,15 +27,12 @@
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
-    "css-loader": "^0.26.2",
+    "css-loader": "^0.26.1",
     "react-hot-loader": "^3.0.0-beta.6",
-    "style-loader": "^0.13.2",
+    "style-loader": "^0.13.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1",
-
-
     "better-console": "^1.0.0",
-    "css-loader": "^0.26.1",
     "del": "^2.2.2",
     "eslint": "^3.13.1",
     "eslint-plugin-destructuring": "^2.0.0",
@@ -70,7 +67,6 @@
     "require-dot-file": "^0.4.0",
     "run-sequence": "^1.2.2",
     "semantic-ui": "^2.2.7",
-    "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "yamljs": "^0.2.8",
     "@storybook/addon-actions": "^3.1.8",
@@ -82,6 +78,7 @@
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "react": "^15.4.2",
+    "react-datepicker": "^0.52.0",
     "react-dom": "^15.4.2",
     "semantic-ui-react": "^0.64.4",
     "uikit": "^2.27.2"
